--- a/general.css
+++ b/general.css
@@ -7,7 +7,8 @@
         font-size: 16px;
     }
 
-    a { color: white;
+    a {
+        color: white;
         text-decoration: none;
     }
 
@@ -43,7 +44,7 @@
 
     /* Principal code */
 
- /* Botones */
+    /* Botones */
     .red,
     .white {
         padding: 0.8rem;
@@ -64,13 +65,13 @@
         border: 0.15rem solid white;
     }
 
-   /* Footer */
-   footer {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-size: var(--boton-escr);
-}
+    /* Footer */
+    footer {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        font-size: var(--boton-escr);
+    }
 
     .footer-menu,
     .footer-logo {
@@ -166,8 +167,10 @@
         gap: 1rem;
     }
 
-    .hamburguesa_menu{font-size: 2rem;
-        display: none;}
+    .hamburguesa_menu {
+        font-size: 2rem;
+        display: none;
+    }
 
     /* Patrocinadores animation */
     .marquee-infinite div {
@@ -192,57 +195,70 @@
     .marquee-infinite img {
         width: 10%;
     }
+
     /* hamburguesa de andres */
 
-    .topnav {align-items: center;
+    .topnav {
+        align-items: center;
         justify-content: space-around;
         overflow: hidden;
-       
-        display:flex;
-      }
-      
-          #label_boton {display:none;}
-          
-       .ham {position: absolute;
-                top: 2rem;
-                right: 2rem;
-                }
-      .topnav .logo_nav{width: 20%;
-                        height: 20%;}
-      .topnav a {
+
+        display: flex;
+    }
+
+    #label_boton {
+        display: none;
+    }
+
+    .ham {
+        position: absolute;
+        top: 2rem;
+        right: 2rem;
+    }
+
+    .topnav .logo_nav {
+        width: 20%;
+        height: 20%;
+    }
+
+    .topnav a {
         display: block;
         color: #f2f2f2;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
-        
-      }
-      
-      .topnav a:hover {
-        
+
+    }
+
+    .topnav a:hover {
+
         color: red;
-      }
-      
-      .topnav a.active {
-        
+    }
+
+    .topnav a.active {
+
         color: white;
-      }
-      
-      .topnav .icon {
+    }
+
+    .topnav .icon {
         display: none;
-      }
-      #i { font-size: 3rem;
-            color: white;
-            background-color: pink;
-              font-size: 17px;
+    }
+
+    #i {
+        font-size: 3rem;
+        color: white;
+        background-color: pink;
+        font-size: 17px;
         background-color: red;
-         padding: 14px 16px;
-         display:none;}
-      
-      #boton_ham {
-      
-      display: none; }
+        padding: 14px 16px;
+        display: none;
+    }
+
+    #boton_ham {
+
+        display: none;
+    }
 
     @keyframes marquee-infinite {
         0% {
@@ -254,12 +270,20 @@
         }
     }
 
-    @media screen and (max-width: 1290px){
-        .redes_sociales_nav{display: none;}
-        .menu_nav{width: 80%;}
-        .logo_nav{width:20%;
-                height: 20%;}
-        
+    @media screen and (max-width: 1290px) {
+        .redes_sociales_nav {
+            display: none;
+        }
+
+        .menu_nav {
+            width: 80%;
+        }
+
+        .logo_nav {
+            width: 20%;
+            height: 20%;
+        }
+
     }
 
     /* Media-Queries */
@@ -275,71 +299,101 @@
         .marquee-infinite div {
             width: 300%;
         }
-        .topnav a:not(:first-child) {display: none;}
 
-        #boton_ham:checked ~ #myTopnav {display: block;
-                                                   text-align: left;
-      }
-      #i {display: block;}
-      /**/
-      .topnav { 
-      
-        flex-direction: column; 
-      }
-      #home {margin-right: auto;
+        .topnav a:not(:first-child) {
+            display: none;
         }
-      
-    
-    .topnav a {
-    
-      text-align: center; }
-    
-    #label_boton { position: absolute;
-                    top: 0;
-                     right: 0;
-                     z-index:100;
-                     display:block;
-    
-                   }
+
+        #boton_ham:checked~#myTopnav {
+            display: block;
+            text-align: left;
+        }
+
+        #i {
+            display: block;
+        }
+
+        /**/
+        .topnav {
+
+            flex-direction: column;
+        }
+
+        #home {
+            margin-right: auto;
+        }
+
+
+        .topnav a {
+
+            text-align: center;
+        }
+
+        #label_boton {
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 100;
+            display: block;
+
+        }
 
     }
+
     @media screen and (max-width: 768px) {
 
 
-        .topnav.responsive {position: relative;}
-      
-         #boton_ham:checked ~ #myTopnav a {display: block;
-                                           text-align: center;
+        .topnav.responsive {
+            position: relative;
         }
-          
+
+        #boton_ham:checked~#myTopnav a {
+            display: block;
+            text-align: center;
+        }
+
         .topnav.responsive a {
-       
-          display: block;
-          text-align: left;
+
+            display: block;
+            text-align: left;
         }
-        
-        #home {margin-right: 0;
-          }
-       
-        
-      }
+
+        #home {
+            margin-right: 0;
+        }
+
+
+    }
 
     @media screen and (max-width: 650px) {
-        nav{justify-content: center;
-            }
-        .menu_nav ul{display: none;}
-        .logo_nav{justify-content: center;
-                  margin-left: 3rem;
-                  width: 70%;
-                  height: 70%;}
-        .logo_nav img{justify-content: center;
-                      width: 80%;
-                      height: 80%;
-                      margin: auto;}
-        .hamburguesa_menu{display: none ;
-                          margin-right: 0rem;
-                        font-size: 0rem;}
-        
+        nav {
+            justify-content: center;
+        }
+
+        .menu_nav ul {
+            display: none;
+        }
+
+        .logo_nav {
+            justify-content: center;
+            margin-left: 3rem;
+            width: 70%;
+            height: 70%;
+        }
+
+        .logo_nav img {
+            justify-content: center;
+            width: 80%;
+            height: 80%;
+            margin: auto;
+        }
+
+        .hamburguesa_menu {
+            display: none;
+            margin-right: 0rem;
+            font-size: 0rem;
+        }
+
     }
 
     @media screen and (max-width: 380px) {
