--- a/inicio.css
+++ b/inicio.css
@@ -153,6 +153,7 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 2rem;
+        column-gap: 2rem;
     }
 
 
@@ -167,7 +168,9 @@
     .noticias-cartas {
         display: flex;
         flex-direction: column;
+        column-gap: 2rem;
         gap: 2rem;
+        width: 70%;
 
     }
 
@@ -269,6 +272,10 @@
         transform: rotateY(calc(-10deg * var(--r))) translateX(calc(-300px * var(--r)));
         z-index: calc((var(--position) - var(--abs)));
     }
+
+    input[type=radio] {
+        accent-color: var(--red);
+      }
 
 
     div.item:nth-of-type(1) {
